Completed 14.2 A web interface for following users

--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,9 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  follower_id: 1
-  followed_id: 2
+  follower: zuks
+  followed: lana
 
 two:
-  follower_id: 1
-  followed_id: 3
+  follower: zuks
+  followed: malory
+
+three:
+  follower: lana
+  followed: zuks
+
+four:
+  follower: archer
+  followed: zuks
